# Workshop_Crawler

./: .env-example  README.md  pyproject.toml
src/: start.py
src/browser/: ec_crawler.py  generic_b_crawler.py  generic_crawler.py  mercado_livre.py
src/browser/crawlers/: default_crawler.py
src/browser/provider/: generic_b_crawler.py
src/request/: mercado_livre.py
src/tools/: mongodb.py
